@@ -3,10 +3,13 @@ DIST 0002-block-introduce-the-BFQ-v7r5-I-O-sched-for-3.16.patch1 210285 SHA256 4
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r5-for-3.16.0.patch1 40497 SHA256 901db70d0e8ea73167998662cfa517e0d9c48d93b95500b5a5d74dfca2ac4c66 SHA512 b645b483623b2a5fa2806991e2f73df83faf4ecd5a331624e38c671ed462bf124b884caad2fc76c8eaa326e3645d2e3efe2d2c06da90410db4ff6798e3305326 WHIRLPOOL 7f726cf637a11363031795a4cc6511a85e6a13a71b732ff1a53bee6c12dfa01e266b1c1a275459c281d337b9cc90275446b9e11bf32a1316593ffcdfc27009a3
 DIST README-v7r5-0.BFQ 20481 SHA256 c12799344770d3834a8bff7f957e4ef432d819980d32359c04b4c87a662c855b SHA512 ca5bf1b4fbd61a9733e8d6f12f7740d34117e72aed29558368dd8922ade66651a313fefa19855d7d157d115cd14d1d7a84d4161d20f6447da48ea60140c0938b WHIRLPOOL b9db6e465c5648714a3730f5c83169908482e454fcdb597a943fdd64d823780b7c35625d023adfb478c9fb53970f9e1773cf38bd33b9fd2ba073b12e4e6ec915
 DIST aufs-sources-3.16_p20140818.tar.xz 160300 SHA256 2353972e8d9df0ee031b032669bc731f9aa7514ce27bcfb915e66bb5aee50d6e SHA512 95baadc549b5e99f83cb5698da1bf53cc161d96ef64f8613db384718c02fa4924953a73832b73419ded43dbca3c1af759b11f2bd6b47e31cbbd195be8a0df600 WHIRLPOOL f82c4e24e2df42b58d079d7b22923bbb0c4a5bce65e1f5d20da67e75dec0b4b9a058515f6267229f4abfc38dfe52e3c92a401a20b0fdf8abe26d9f88c1c46320
+DIST aufs-sources-3.16_p20140908.tar.xz 160604 SHA256 4616e69a229b327321eaf248278f209bbfde3a23c9249eb057d0ebe9b0f0f3ad SHA512 38df626969587b8d6162eaa9b61de85c31f77e629e8e806b768f3a05b09c2471d6ee1407b04153aab9551f72761e0c07870f833486254f66cd0c9aa2b8540efe WHIRLPOOL 7e5073d8db8db8173a28ef8986335192b3f6efa71a664c83c08a45f6e5c5ff04b17f96f4ac17391df1017ef387d6b7965288fae003c38d39c76e647c62b917b6
 DIST deblob-3.16 127089 SHA256 36a4b6667d16cac9f4882f4c96a57c37ea2f7ef8ed9e128db3ee9f60fc7d95d6 SHA512 8c7edc649eb68c194ab05856bf7a0359b18793001c247e6e742a56daaca7c159787240634a79a042ac8f31338900d8afcd3c82883ba5398be43d4d63a1882dec WHIRLPOOL 17b3e1025a138a13d5a0a973802d899e3881694cfc59520197994fd93245d835b092cb976873d15cf8b9079562ed3fa62dba19d87a668dbb757ddedd13d12946
 DIST deblob-check-3.16 632725 SHA256 9647fc6ef8dc3ad7cadc511c0987664ba971892c3d4f733725d5b86e32caa4bf SHA512 4dd69ae9c7a98b1b5fc01de48282d4c4da196bd938ec55c2a82442d1134822693d517466db2ed4ebe8d46014a9dbe1c0ba2263cb21e49372dd0d0ace5ba3d504 WHIRLPOOL 5feadd7e44e6d9c633f58fc34b91c5ba4dc3105d8d9f3abb656cd15fc3603c3d68ad94d8d233fc47f5378a98988e8f9fa62fcddc4b7d1cba197ca7e9784445a6
 DIST genpatches-3.16-2.base.tar.xz 11984 SHA256 4e134e601992be75502e1d1378e653e664859150563f4e19f3cb1d3d0d22de88 SHA512 0d13aa991dac64061070303b23639afc27c52bab098187dda23efb5d7b1a9aba48f2a75adc80cf5b713f76852f3ab9f343ecfa465f1e21e0cc7b604a3b15acad WHIRLPOOL 2b68aa6dd6bbd43c1c299fffacd693d390f286727daadf64b799a3fbc77654bdf57b82503e5e3c9f9f91714e02b6a36f288753cbf05511886176df960e130f2d
 DIST genpatches-3.16-2.extras.tar.xz 17664 SHA256 97897a464ff638dda372c8bed7ee10723fde7f370cab2c770fd28b450bf3221f SHA512 251639762bdd1477314a2f2b89249955826848e15874677242c10c56e9f724c54b1afdaeae8479b5326bd4861efc73e8d29658170379a6e1724450335c0c1faa WHIRLPOOL dd38dd64c263dea74f20658e8904bf2f88858cd3f613b16f0361195f9bcb73859310897f35ba501a3f46fe1ccba573e051a61fe42b2d3383bf3750081ff6269a
+DIST genpatches-3.16-3.base.tar.xz 62548 SHA256 6263f780ba964ddabffa97b25a20e614ee4cfcdb5ba69553ffb2204ad1a66bb8 SHA512 746e477009c9c9950f5de1507361812ecd59d351c23c24d2913e6aeb76e31f96b2e781efe0098f6649a447a694ec1ecdc77f0123413d4f9e98e8bcdc81a07810 WHIRLPOOL e8a6b21fd79c2727104513f48fe1663c47032b397da700c53a331660b390a0257c610429bd85871038fc80a4f37de37b7e5d52ef6b7426ca75c7f60df6897b68
+DIST genpatches-3.16-3.extras.tar.xz 17672 SHA256 8874fc85725f970a9812baa6e6fbfdaee657fb741214241832ea7f5e62d4899c SHA512 855b9a0463173dd721a16a6efb5e6ca412f0972a2450470fa875b28d3a213cd4095db720ab22147cf5cea900f7ddf4162c7c9adf6f9ceeb1b3d4171bcc441023 WHIRLPOOL 7e60f734738e06e64549c6b4fa0b8b837e0979878e1a1e46105f9c63d66bf320acc6484c57abc0efa266323ad86a9c276b6837f3f00b40f70d256d0863e30044
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-8883161b98577bd2397dc8616f8e805fb1861be1.patch 15840 SHA256 8154715b3b3c7ebfb614db64afabeb192692e82c73bacdceaad0dc584a07fb8f SHA512 f0acbc5ca8115dbee77437e69ff7de45756ac3ba50bb895681630f4e4722b8cb1b034a2aded5645aac8ae88cb236f864f2d150fa4dea017ffee45ca1d70b9d8c WHIRLPOOL 40977af61d98f5d31695b6f81438ac08dbd07d51663df4d5a078564cdcc7fc9310d9ce97522c43bf0e631d10d2d8d304eb437700cf44799b7b9496675fc4a59e
 DIST linux-3.16.tar.xz 80501624 SHA256 4813ad7927a7d92e5339a873ab16201b242b2748934f12cb5df9ba2cfe1d77a0 SHA512 64033e741d3f42ed06010e63e69d66e1d3d9414ef20f76834508878d4218b72619541a18ef4fd377204af2859e52198310998109b20ed9b67722586b28c9a231 WHIRLPOOL 69e5e367751185ff4e8d7c1f23c6f1e8f547fe782f581f6cf5f0bde301fa922185c8b996b815cf19fb7f14ca64042e264e87d321872ee3096adad02b1015769b
