@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.16.2 (13 Sep 2014)
+
+  13 Sep 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.16.2.ebuild:
+  Bump to latest aufs3, genpatches and linux release
+
   21 Aug 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.16.1.ebuild:
   Bump to latest aufs3
 
